[package]
name = "vpipe"
version = "0.2.2"
edition = "2021"
rust-version = "1.59"
description = "A command line pipeline viewer tools"
documentation = "https://docs.rs/vpipe"
repository = "https://github.com/iasonliu/vpipe"
homepage = "https://github.com/iasonliu/vpipe"
license = "MIT"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
crossbeam = { version = "0.8.1"}